--- a/_posts/2017-06-05-Malibu.md
+++ b/_posts/2017-06-05-Malibu.md
@@ -7,7 +7,7 @@ categories: life
 
 ### I love the new song Malibu by Miley Cirus.
 
-She sounds so happy and content. She looks beautiful and glowing in the MV. 
+She sounds so happy and content. She looks beautiful and glowing in the music video. 
 
 Isn't she great? She is one year younger than me, but she lives life to the fullest. I was once amazed by the way she talks, so fearless.
 I was also shocked by the pictures she posted on Instagram, she plays games with her body and her pets and she likes to pose in her bedroom. She has lots of tattoos.
