--- a/_posts/2017-07-05-周轶君.md
+++ b/_posts/2017-07-05-周轶君.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 周轶君      
-categories: life
+category: life
 ---
 
 昨晚看了圆桌派新出的一期视频，主题是租房跟买房，意外的在片头发现嘉宾有周轶君，整个人就更加期待了。等了十四分钟她才有机会第一次发言。
@@ -14,4 +14,4 @@ categories: life
 
 独立，有胆识，有见解，作为一名女性没有被条条框框锁住，更没有去锁别人，这是我喜欢她的原因。最喜爱的锵锵女嘉宾。
 
-计划找一个时间详细的翻看她的每一条微博。这个周六去Akimbo cafe的话。
+计划找一个时间详细的翻看她的每一条微博。这个周六去Akimbo cafe的话。-- 来了
